# stats_exercise

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_data.json
ex01/: solution.ipynb  solution.tex
ex02/: solution.ipynb  solution.tex
ex03/: solution.html  solution.ipynb
ex04/: solution.html  solution.ipynb
