[tool.poetry]
name = "stats-exercise"
version = "0.1.0"
description = "Basic statistics exercises"
authors = ["madhukar01 <mholla8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.26.0"
scipy = "^1.11.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
